--- a/contact.html
+++ b/contact.html
@@ -117,17 +117,13 @@
                             </p>
 
                             <div class="d-grid gap-1">
-                                <!-- WhatsApp: reemplazar por link real si lo tienen -->
                                 <a class="btn btn-primary py-1" href="tel:+12127953264">
                                     <i class="fa fa-phone-alt me-2 text-dark"></i>Call Now
-                                </a>
-
-                                <!-- Si después te pasan el número real de WhatsApp, lo armamos con wa.me -->
-                                <a class="btn btn-primary py-1 text-white" href="https://wa.me/12127953264" target="_blank"
+                                </a>                                
+                                <a class="btn btn-primary py-1 text-white" href="https://wa.me/1347772-5938" target="_blank"
                                     rel="noopener" style="background-color: rgba(0, 128, 0, 0.568);">
                                     <i class="bi bi-whatsapp me-2 text-white"></i>WhatsApp
                                 </a>
-
                                 <a class="btn btn-primary py-1" href="https://maps.app.goo.gl/vtSKQs5KThZTibjT9"
                                     target="_blank" rel="noopener">
                                     <i class="fa fa-map-marker-alt me-2 text-dark"></i>Open in Google Maps
