--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     <!-- Navbar Start -->
     <div class="container-fluid bg-light sticky-top p-0">
         <nav class="navbar navbar-expand-lg navbar-light p-0">
-            <a href="index.html" class="navbar-brand bg-primary py-4 px-5 me-0">
-                <h1 class="mb-0"><i class="bi bi-scissors"></i>New Era</h1>
+            <a href="index.html" class="navbar-brand bg-dark py-4 px-5 me-0">
+                <img src="img/logo-new-era.png" alt="Logo New Era" class="logo-new-era">
             </a>
             <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse"
                 data-bs-target="#navbarCollapse">
@@ -88,6 +88,7 @@
                         </p>
 
                         <div class="row g-4 animated slideInLeft">
+                            <!-- Location -->
                             <div>
                                 <div class="d-flex align-items-center">
                                     <a href="https://maps.app.goo.gl/vtSKQs5KThZTibjT9"
@@ -102,16 +103,34 @@
                                 </div>
                             </div>
 
-                            <!-- Phone placeholder -->
+                            <!-- Phone -->
                             <div>
                                 <div class="d-flex align-items-center">
-                                    <div class="btn-square btn btn-primary flex-shrink-0">
+                                    <a class="btn-square btn btn-primary flex-shrink-0" href="tel:+12127953264">
                                         <i class="fa fa-phone text-dark"></i>
-                                    </div>
+                                    </a>
                                     <div class="px-3">
-                                        <h5 class="text-primary mb-0">Call / WhatsApp</h5>
+                                        <h5 class="text-primary mb-0">Call</h5>
                                         <p class="fs-6 text-dark mb-0">
-                                            (212) 795-3264
+                                            +1 (212) 795-3264
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Whatsapp -->
+                            <div>
+                                <div class="d-flex align-items-center">                         
+                                    <a class="btn-square btn btn-primary flex-shrink-0"
+                                        href="https://wa.me/13477725938" target="_blank" rel="noopener"
+                                        style="background-color: rgba(0, 128, 0, 0.568);">
+                                        <i class="bi bi-whatsapp text-dark"></i>
+
+                                    </a>
+                                    <div class="px-3">
+                                        <h5 class="text-primary mb-0">WhatsApp</h5>
+                                        <p class="fs-6 text-dark mb-0">
+                                            +1 (347) 772-5938
                                         </p>
                                     </div>
                                 </div>
@@ -281,8 +300,8 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-6 pe-lg-5">
-                    <a href="index.html" class="navbar-brand">
-                        <h1 class="display-5 text-primary mb-0"><i class="bi bi-scissors"></i>New Era</h1>
+                    <a href="index.html">
+                        <img src="img/logo-new-era.png" alt="Logo New Era" class="logo-new-era">
                     </a>
 
                     <p>
@@ -298,12 +317,13 @@
                     <!-- TODO: completar email real -->
                     <p><i class="fa fa-envelope me-2"></i>info@salonnewera.com</p>
 
-                    <div class="d-flex justify-content-start mt-4">                        
-                        <a class="btn btn-primary me-3"
-                            href="https://www.instagram.com/beautysalonnewera/" aria-label="Instagram"
-                            target="_blank"><i class="fab fa-instagram" style="margin-right: 0.3em;"></i>Instagram</a>
+                    <div class="d-flex justify-content-start mt-4">
+                        <a class="btn btn-primary me-3" href="https://www.instagram.com/beautysalonnewera/"
+                            aria-label="Instagram" target="_blank"><i class="fab fa-instagram"
+                                style="margin-right: 0.3em;"></i>Instagram</a>
                         <a class="btn btn-primary me-3" href="https://maps.app.goo.gl/vtSKQs5KThZTibjT9"
-                            aria-label="Google Maps" target="_blank"><i class="fas fa-map-marked-alt" style="margin-right: 0.3em;"></i>Google Maps</a>
+                            aria-label="Google Maps" target="_blank"><i class="fas fa-map-marked-alt"
+                                style="margin-right: 0.3em;"></i>Google Maps</a>
                     </div>
                 </div>
 
