--- a/about.html
+++ b/about.html
@@ -47,12 +47,11 @@
     </div>
     <!-- ! Spinner End -->
 
-
     <!-- ! Navbar Start -->
-    <div class="container-fluid bg-light sticky-top p-0">
-        <nav class="navbar navbar-expand-lg navbar-light p-0">
-            <a href="index.html" class="navbar-brand bg-primary py-4 px-5 me-0">
-                <h1 class="mb-0"><i class="bi bi-scissors"></i>New Era</h1>
+    <div class="container-fluid bg-dark sticky-top p-0">
+        <nav class="navbar navbar-expand-lg navbar-dark p-0">
+            <a href="index.html" class="navbar-brand py-4 px-5 me-0">
+                <img src="img/logo-new-era.png" alt="Logo New Era" class="logo-new-era">
             </a>
             <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse"
                 data-bs-target="#navbarCollapse">
@@ -65,8 +64,9 @@
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
                 </div>
 
-                <!-- CTA -->
-                <a class="btn btn-sm btn-primary" href="contact.html">Book Now</a>
+                <!-- CTA: WhatsApp / Booking -->
+                <!-- TODO: Reemplazar por link real de WhatsApp o booking -->
+                <a class="btn btn-primary" href="contact.html">Book Now</a>
             </div>
         </nav>
     </div>
@@ -236,19 +236,19 @@
             </div>
         </div>
     </div>
-    <!-- Team End -->
+    <!-- ! Team End -->
 
-<!-- ! Footer Start -->
-    <div class="container-fluid footer position-relative bg-dark text-white-50 py-5 mt-5 wow fadeIn"
+    <!-- ! Footer Start -->
+    <div class="container-fluid footer position-relative bg-dark text-white-50 py-2 mt-5 wow fadeIn"
         data-wow-delay="0.2s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-6 pe-lg-5">
-                    <a href="index.html" class="navbar-brand">
-                        <h1 class="display-5 text-primary mb-0"><i class="bi bi-scissors"></i>New Era</h1>
+                    <a href="index.html" class="a-logo">
+                        <img src="img/logo-new-era.png" alt="Logo New Era" class="logo-new-era">
                     </a>
 
-                    <p>
+                    <p class="mt-4">
                         New Era Beauty Salon & Barbershop: barbería, braids, color y nail services en Washington
                         Heights.
                         <strong>Take advantage of the promotions</strong>.
@@ -261,12 +261,13 @@
                     <!-- TODO: completar email real -->
                     <p><i class="fa fa-envelope me-2"></i>info@salonnewera.com</p>
 
-                    <div class="d-flex justify-content-start mt-4">                        
-                        <a class="btn btn-primary me-3"
-                            href="https://www.instagram.com/beautysalonnewera/" aria-label="Instagram"
-                            target="_blank"><i class="fab fa-instagram" style="margin-right: 0.3em;"></i>Instagram</a>
+                    <div class="d-flex justify-content-start mt-4">
+                        <a class="btn btn-primary me-3" href="https://www.instagram.com/beautysalonnewera/"
+                            aria-label="Instagram" target="_blank"><i class="fab fa-instagram"
+                                style="margin-right: 0.3em;"></i>Instagram</a>
                         <a class="btn btn-primary me-3" href="https://maps.app.goo.gl/vtSKQs5KThZTibjT9"
-                            aria-label="Google Maps" target="_blank"><i class="fas fa-map-marked-alt" style="margin-right: 0.3em;"></i>Google Maps</a>
+                            aria-label="Google Maps" target="_blank"><i class="fas fa-map-marked-alt"
+                                style="margin-right: 0.3em;"></i>Google Maps</a>
                     </div>
                 </div>
 
@@ -299,7 +300,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    &copy; <a class="border-bottom" href="index.html#home">New Era</a> 2026, All Right Reserved.
+                    <a class="border-bottom" href="index.html#home">New Era</a> &copy; 2026, All Right Reserved.
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <span class="ms-2">Customizations by <a class="border-bottom" target="_blank"
