--- a/contact.html
+++ b/contact.html
@@ -47,12 +47,11 @@
     </div>
     <!-- ! Spinner End -->
 
-
     <!-- ! Navbar Start -->
-    <div class="container-fluid bg-light sticky-top p-0">
-        <nav class="navbar navbar-expand-lg navbar-light p-0">
-            <a href="index.html" class="navbar-brand bg-primary py-4 px-5 me-0">
-                <h1 class="mb-0"><i class="bi bi-scissors"></i>New Era</h1>
+    <div class="container-fluid bg-dark sticky-top p-0">
+        <nav class="navbar navbar-expand-lg navbar-dark p-0">
+            <a href="index.html" class="navbar-brand py-4 px-5 me-0">
+                <img src="img/logo-new-era.png" alt="Logo New Era" class="logo-new-era">
             </a>
             <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse"
                 data-bs-target="#navbarCollapse">
@@ -65,13 +64,13 @@
                     <a href="contact.html" class="nav-item nav-link active">Contact</a>
                 </div>
 
-                <!-- CTA -->
-                <a class="btn btn-sm btn-primary" href="contact.html">Book Now</a>
+                <!-- CTA: WhatsApp / Booking -->
+                <!-- TODO: Reemplazar por link real de WhatsApp o booking -->
+                <a class="btn btn-primary" href="contact.html">Book Now</a>
             </div>
         </nav>
     </div>
     <!-- ! Navbar End -->
-
 
     <!-- ! Hero Start -->
     <div class="container-fluid bg-light page-header py-5 mb-2">
@@ -87,7 +86,6 @@
     </div>
     <!-- ! Hero End -->
 
-
     <!-- ! Contact Start -->
     <div class="container-fluid py-5">
         <div class="container">
@@ -95,125 +93,124 @@
                 <h1 class="font-dancing-script text-primary">Contact</h1>
                 <h2 class="mb-4">Have Any Query? Contact Us</h2>
             </div>
-            <div class="row g-5 justify-content-center align-items-center">                
-                    <!-- * Contact Info -->
-                    <div class="col-lg-4 wow fadeIn" data-wow-delay="0.2s">
-                        <div class="bg-light p-4 h-100">
-                            <h4 class="mb-3">New Era Beauty Salon & Barbershop</h4>
+            <div class="row g-5 justify-content-center align-items-center">
+                <!-- * Contact Info -->
+                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.2s">
+                    <div class="bg-light p-4 h-100">
+                        <h4 class="mb-3">New Era Beauty Salon & Barbershop</h4>
 
-                            <p class="mb-2">
-                                <i class="fa fa-map-marker-alt me-2 text-primary"></i>
-                                4177 Broadway 177th Street, NYC
-                            </p>
+                        <p class="mb-2">
+                            <i class="fa fa-map-marker-alt me-2 text-primary"></i>
+                            4177 Broadway 177th Street, NYC
+                        </p>
 
-                            <p class="mb-2">
-                                <i class="fa fa-phone-alt me-2 text-primary"></i>
-                                (212) 795-3264
-                            </p>
+                        <p class="mb-2">
+                            <i class="fa fa-phone-alt me-2 text-primary"></i>
+                            (212) 795-3264
+                        </p>
 
-                            <p class="mb-3">
-                                <i class="fa fa-envelope me-2 text-primary"></i>
-                                info@salonnewera.com
-                            </p>
+                        <p class="mb-3">
+                            <i class="fa fa-envelope me-2 text-primary"></i>
+                            info@salonnewera.com
+                        </p>
 
-                            <div class="d-grid gap-1">
-                                <a class="btn btn-primary py-1" href="tel:+12127953264">
-                                    <i class="fa fa-phone-alt me-2 text-dark"></i>Call Now
-                                </a>                                
-                                <a class="btn btn-primary py-1 text-white" href="https://wa.me/1347772-5938" target="_blank"
-                                    rel="noopener" style="background-color: rgba(0, 128, 0, 0.568);">
-                                    <i class="bi bi-whatsapp me-2 text-white"></i>WhatsApp
-                                </a>
-                                <a class="btn btn-primary py-1" href="https://maps.app.goo.gl/vtSKQs5KThZTibjT9"
-                                    target="_blank" rel="noopener">
-                                    <i class="fa fa-map-marker-alt me-2 text-dark"></i>Open in Google Maps
-                                </a>
-                            </div>
+                        <div class="d-grid gap-1">
+                            <a class="btn btn-primary py-1" href="tel:+12127953264">
+                                <i class="fa fa-phone-alt me-2 text-dark"></i>Call Now
+                            </a>
+                            <a class="btn btn-primary py-1 text-white" href="https://wa.me/1347772-5938" target="_blank"
+                                rel="noopener" style="background-color: rgba(0, 128, 0, 0.568);">
+                                <i class="bi bi-whatsapp me-2 text-white"></i>WhatsApp
+                            </a>
+                            <a class="btn btn-primary py-1" href="https://maps.app.goo.gl/vtSKQs5KThZTibjT9"
+                                target="_blank" rel="noopener">
+                                <i class="fa fa-map-marker-alt me-2 text-dark"></i>Open in Google Maps
+                            </a>
                         </div>
                     </div>
-                    <!-- * End Contact Info -->
+                </div>
+                <!-- * End Contact Info -->
 
-                    <div class="col-lg-5 wow fadeIn" data-wow-delay="0.3s">
-                        <h5 class="mb-2 text-center">Contact Form</h5>
-                        <form action="https://api.web3forms.com/submit" method="POST">
-                            <!-- Web3Forms REQUIRED -->
-                            <input type="hidden" name="access_key" value="PEGAR_ACCESS_KEY_AQUI">
-                            <!-- TODO: fijar el destinatario -->
-                            <!-- <input type="hidden" name="to_email" value="contacto@salonnewera.com"> -->
+                <div class="col-lg-5 wow fadeIn" data-wow-delay="0.3s">
+                    <h5 class="mb-2 text-center">Contact Form</h5>
+                    <form action="https://api.web3forms.com/submit" method="POST">
+                        <!-- Web3Forms REQUIRED -->
+                        <input type="hidden" name="access_key" value="PEGAR_ACCESS_KEY_AQUI">
+                        <!-- TODO: fijar el destinatario -->
+                        <!-- <input type="hidden" name="to_email" value="contacto@salonnewera.com"> -->
 
-                            <!-- Extras  -->
-                            <input type="hidden" name="subject" value="New contact from New Era website">
-                            <input type="hidden" name="from_name" value="New Era Website">
-                            <input type="hidden" name="redirect" value="contact.html?sent=1">
-                            <input type="hidden" name="replyto" value="%email%">
+                        <!-- Extras  -->
+                        <input type="hidden" name="subject" value="New contact from New Era website">
+                        <input type="hidden" name="from_name" value="New Era Website">
+                        <input type="hidden" name="redirect" value="contact.html?sent=1">
+                        <input type="hidden" name="replyto" value="%email%">
 
-                            <!-- Anti-spam honeypot -->
-                            <input type="checkbox" name="botcheck" class="d-none" style="display:none;">
+                        <!-- Anti-spam honeypot -->
+                        <input type="checkbox" name="botcheck" class="d-none" style="display:none;">
 
-                            <div class="row g-3">
-                                <div class="col-md-6">
-                                    <div class="form-floating">
-                                        <input type="text" class="form-control" id="name" name="name"
-                                            placeholder="Your Name" required>
-                                        <label for="name">Your Name</label>
-                                    </div>
-                                </div>
-
-                                <div class="col-md-6">
-                                    <div class="form-floating">
-                                        <input type="email" class="form-control" id="email" name="email"
-                                            placeholder="Your Email" required>
-                                        <label for="email">Your Email</label>
-                                    </div>
-                                </div>
-
-                                <div class="col-md-6">
-                                    <div class="form-floating">
-                                        <input type="tel" class="form-control" id="mobileInput" name="mobileInput"
-                                            placeholder="Mobile">
-                                        <label for="mobileInput">Your Mobile</label>
-                                    </div>
-                                </div>
-
-                                <div class="col-md-6">
-                                    <div class="form-floating">
-                                        <input type="text" class="form-control" id="subjectInput" name="subjectInput"
-                                            placeholder="Subject">
-                                        <label for="subjectInput">Subject</label>
-                                    </div>
-                                </div>
-
-                                <div class="col-12">
-                                    <div class="form-floating">
-                                        <textarea class="form-control" placeholder="Leave a message here" id="message"
-                                            name="message" style="height: 150px" required></textarea>
-                                        <label for="message">Message</label>
-                                    </div>
-                                </div>
-
-                                <div class="col-12">
-                                    <button class="btn btn-primary w-100 py-3 ms-0" type="submit">SEND MESSAGE</button>
+                        <div class="row g-3">
+                            <div class="col-md-6">
+                                <div class="form-floating">
+                                    <input type="text" class="form-control" id="name" name="name"
+                                        placeholder="Your Name" required>
+                                    <label for="name">Your Name</label>
                                 </div>
                             </div>
-                        </form>
-                    </div>                
+
+                            <div class="col-md-6">
+                                <div class="form-floating">
+                                    <input type="email" class="form-control" id="email" name="email"
+                                        placeholder="Your Email" required>
+                                    <label for="email">Your Email</label>
+                                </div>
+                            </div>
+
+                            <div class="col-md-6">
+                                <div class="form-floating">
+                                    <input type="tel" class="form-control" id="mobileInput" name="mobileInput"
+                                        placeholder="Mobile">
+                                    <label for="mobileInput">Your Mobile</label>
+                                </div>
+                            </div>
+
+                            <div class="col-md-6">
+                                <div class="form-floating">
+                                    <input type="text" class="form-control" id="subjectInput" name="subjectInput"
+                                        placeholder="Subject">
+                                    <label for="subjectInput">Subject</label>
+                                </div>
+                            </div>
+
+                            <div class="col-12">
+                                <div class="form-floating">
+                                    <textarea class="form-control" placeholder="Leave a message here" id="message"
+                                        name="message" style="height: 150px" required></textarea>
+                                    <label for="message">Message</label>
+                                </div>
+                            </div>
+
+                            <div class="col-12">
+                                <button class="btn btn-primary w-100 py-3 ms-0" type="submit">SEND MESSAGE</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
     <!-- ! Contact End -->
 
-
-    <!-- ! Footer Start -->
-    <div class="container-fluid footer position-relative bg-dark text-white-50 py-5 mt-5 wow fadeIn"
+<!-- ! Footer Start -->
+    <div class="container-fluid footer position-relative bg-dark text-white-50 py-2 mt-5 wow fadeIn"
         data-wow-delay="0.2s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-6 pe-lg-5">
-                    <a href="index.html" class="navbar-brand">
-                        <h1 class="display-5 text-primary mb-0"><i class="bi bi-scissors"></i>New Era</h1>
+                    <a href="index.html" class="a-logo">
+                        <img src="img/logo-new-era.png" alt="Logo New Era" class="logo-new-era">
                     </a>
 
-                    <p>
+                    <p class="mt-4">
                         New Era Beauty Salon & Barbershop: barbería, braids, color y nail services en Washington
                         Heights.
                         <strong>Take advantage of the promotions</strong>.
@@ -223,14 +220,16 @@
 
                     <p class="mb-2"><i class="fa fa-phone-alt me-2"></i>(212) 795-3264</p>
 
+                    <!-- TODO: completar email real -->
                     <p><i class="fa fa-envelope me-2"></i>info@salonnewera.com</p>
 
-                    <div class="d-flex justify-content-start mt-4">                        
-                        <a class="btn btn-primary me-3"
-                            href="https://www.instagram.com/beautysalonnewera/" aria-label="Instagram"
-                            target="_blank"><i class="fab fa-instagram" style="margin-right: 0.3em;"></i>Instagram</a>
+                    <div class="d-flex justify-content-start mt-4">
+                        <a class="btn btn-primary me-3" href="https://www.instagram.com/beautysalonnewera/"
+                            aria-label="Instagram" target="_blank"><i class="fab fa-instagram"
+                                style="margin-right: 0.3em;"></i>Instagram</a>
                         <a class="btn btn-primary me-3" href="https://maps.app.goo.gl/vtSKQs5KThZTibjT9"
-                            aria-label="Google Maps" target="_blank"><i class="fas fa-map-marked-alt" style="margin-right: 0.3em;"></i>Google Maps</a>
+                            aria-label="Google Maps" target="_blank"><i class="fas fa-map-marked-alt"
+                                style="margin-right: 0.3em;"></i>Google Maps</a>
                     </div>
                 </div>
 
@@ -263,7 +262,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    &copy; <a class="border-bottom" href="index.html#home">New Era</a> 2026, All Right Reserved.
+                    <a class="border-bottom" href="index.html#home">New Era</a> &copy; 2026, All Right Reserved.
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <span class="ms-2">Customizations by <a class="border-bottom" target="_blank"
@@ -274,8 +273,7 @@
     </div>
     <!-- ! Copyright End -->
 
-
-    <!-- Back to Top -->
+    <!-- ! Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
 
 
