--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         </p>
 
                         <div class="row g-4 animated slideInLeft links-hero">
-                            <!-- Location -->
+                            <!-- ? Location -->
                             <a href="https://maps.app.goo.gl/vtSKQs5KThZTibjT9" target="_blank" aria-label="Google Maps"
                                 class="text-decoration-none">
                                 <div class="d-flex align-items-center">
@@ -105,7 +105,7 @@
                                 </div>
                             </a>
 
-                            <!-- Phone -->
+                            <!-- ? Phone -->
                             <a href="tel:+12127953264" class="text-decoration-none">
                                 <div class="d-flex align-items-center">
                                     <div class="btn-square btn btn-primary flex-shrink-0">
@@ -121,7 +121,7 @@
                                 </div>
                             </a>
 
-                            <!-- Whatsapp -->
+                            <!-- ? Whatsapp -->
                             <a href="https://wa.me/13477725938" target="_blank" rel="noopener"
                                 class="text-decoration-none">
                                 <div class="d-flex align-items-center">
