--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@
                             <a class="btn btn-primary py-1" href="tel:+12127953264">
                                 <i class="fa fa-phone-alt me-2 text-dark"></i>Call Now
                             </a>
-                            <a class="btn btn-primary py-1 text-white" href="https://wa.me/1347772-5938" target="_blank"
+                            <a class="btn btn-primary py-1 text-white" href="https://wa.me/13477725938" target="_blank"
                                 rel="noopener" style="background-color: rgba(0, 128, 0, 0.568);">
                                 <i class="bi bi-whatsapp me-2 text-white"></i>WhatsApp
                             </a>
@@ -200,7 +200,7 @@
     </div>
     <!-- ! Contact End -->
 
-<!-- ! Footer Start -->
+    <!-- ! Footer Start -->
     <div class="container-fluid footer position-relative bg-dark text-white-50 py-2 mt-5 wow fadeIn"
         data-wow-delay="0.2s">
         <div class="container py-5">
